force-app/main/default/objects/ssot__LoyaltyLedger__dlm/fields/ssot__LoyaltyCurrencyUnitQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyCurrencyUnitQuantity__c</fullName>
    <label>Loyalty Currency Unit Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyCurrencyUnitQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>