force-app/main/default/objects/ssot__LoyaltyLedger__dlm/fields/ssot__LoyaltyProgramCurrencyExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyProgramCurrencyExpirationDate__c</fullName>
    <label>Loyalty Program Currency Expiration Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyProgramCurrencyExpirationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>