force-app/main/default/objects/ssot__LoyaltyLedger__dlm/fields/ssot__LoyaltyTransactionJournalId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyTransactionJournalId__c</fullName>
    <label>Loyalty Transaction Journal</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyTransactionJournalId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>