force-app/main/default/objects/ssot__LoyaltyLedger__dlm/fields/ssot__rel_1697761180012_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761180012_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyLedger_LoyaltyProgramCurrency_rel</label>
    <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
    <relationshipLabel>LoyaltyLedger_LoyaltyProgramCurrency_rel</relationshipLabel>
    <relationshipName>rel_1697761180012_end</relationshipName>
    <type>Lookup</type>
</CustomField>